Added a category for Singleplayer to include questions from the Starcraft and Diablo universes ( Warcraft is by default )